# file-server-http

./: .gitignore  README.md  installer.ps1  package.sh  uninstall.ps1
.github/workflows/: package.yml
MyFileServer/: pyproject.toml  uninstall.ps1
MyFileServer/public/: index.html
MyFileServer/public/assets/: index-BEsI205c.js  index-C27JXtn0.js  index-Cef5tNO7.css  index-DNRgIn1i.js  index-DSdEbjro.js  index-DVK_TYsO.css  index-DdozRfMf.css  index-DnYnfP7-.css  index-tfmB8gOT.css  index-xqri0a7V.js
MyFileServer/services/: __init__.py  authenticator.py  environment.py  explorer.py  network.py  thumbnails.py  validator.py
backend/: .browsers  .tokens  .verified  pyproject.toml  server.py
backend/services/: __init__.py  authenticator.py  decorators.py  environment.py  explorer.py  network.py  thumbnails.py  utilities.py  validator.py
frontend/: .env.development  README.md  eslint.config.js  index.css  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  Authentication.tsx  BottomPanel.tsx  Breadcrumb.tsx  DriveItem.tsx  EmptyFolder.tsx  ErrorDetails.tsx  FileItem.tsx  FolderItem.tsx  FolderItems.tsx  Home.tsx  HomeItems.tsx  ItemDetails.tsx  Items.tsx  Layout.tsx  MusicVisualizer.tsx  PathItems.tsx  RenameItem.tsx  SearchItems.tsx  SearchPanel.tsx  ServerOffline.tsx  SettingsPanel.tsx  (+4 more)
scripts/: install.ps1  install.sh  installer.ps1  package.ps1  package.sh  remote.ps1  uninstall.ps1
(+21 files in other folders)
