[project]
name = "backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "mutagen>=1.47.0",
    "pillow>=11.3.0",
    "playsound>=1.3.0",
    "requests>=2.32.4",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "flask-cors>=6.0.1",
]

[tool.uv.sources]
playsound = { git = "https://github.com/taconi/playsound" }
